--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "convex": "^1.0.2",
@@ -18,9 +19,12 @@
     "react-dom": "^18.2.0",
     "react-native": "0.72.3",
     "react-native-get-random-values": "^1.9.0",
+    "react-native-pure-jwt": "^3.0.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
-    "twrnc": "^3.6.3"
+    "react-native-vector-icons": "^10.0.0",
+    "twrnc": "^3.6.3",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
