--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-pure-jwt": "^3.0.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
+    "react-native-svg": "^13.10.0",
     "react-native-vector-icons": "^10.0.0",
     "twrnc": "^3.6.3",
     "zustand": "^4.4.0"
