--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-native": "0.72.3",
     "react-native-get-random-values": "^1.9.0",
+    "react-native-modal": "^13.0.1",
     "react-native-pure-jwt": "^3.0.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
