--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "react-native-get-random-values": "^1.9.0",
     "react-native-image-picker": "^5.6.0",
     "react-native-modal": "^13.0.1",
+    "react-native-pell-rich-editor": "^1.9.0",
     "react-native-pure-jwt": "^3.0.2",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-svg": "^13.10.0",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-webview": "^13.3.1",
     "twrnc": "^3.6.3",
     "zustand": "^4.4.0"
   },
