--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-svg": "^13.10.0",
+    "react-native-swipe-item": "^0.7.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-webview": "^13.3.1",
     "twrnc": "^3.6.3",
