--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.4",
+    "react-native-fast-image": "^8.6.3",
     "react-native-get-random-values": "^1.9.0",
     "react-native-image-picker": "^5.6.0",
     "react-native-modal": "^13.0.1",
